Initial commit of working Jekyll site

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 ---
 layout: home
-author_profile: true
+title: "Welcome to My Portfolio"
+permalink: /
 ---
+
+## About Me
+Hi, I'm James Winslow, a Data Scientist with a passion for solving complex problems using data-driven approaches.
+
+## Projects
+Here you can find some of my recent projects.
