Remove project placeholders and fix resume display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             <nav id="nav">
                 <a href="index.html">Home</a>
                 <a href="#about">About</a>
-                <a href="#projects">Projects</a>
                 <a href="#resume">Resume</a>
                 <a href="#contact">Contact</a>
             </nav>
@@ -46,43 +45,6 @@
             </div>
         </section>
 
-        <!-- Projects Section -->
-        <section id="projects" class="wrapper style1 special">
-            <div class="inner">
-                <header class="major">
-                    <h2>Projects</h2>
-                </header>
-                <div class="box alt">
-                    <div class="row gtr-uniform">
-                        <section class="col-4 col-6-medium col-12-xsmall">
-                            <span class="icon solid alt major fa-chart-area"></span>
-                            <h3>Project 1</h3>
-                            <p>A brief description of the project.</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button alt">Learn More</a></li>
-                            </ul>
-                        </section>
-                        <section class="col-4 col-6-medium col-12-xsmall">
-                            <span class="icon solid alt major fa-chart-line"></span>
-                            <h3>Project 2</h3>
-                            <p>A brief description of the project.</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button alt">Learn More</a></li>
-                            </ul>
-                        </section>
-                        <section class="col-4 col-6-medium col-12-xsmall">
-                            <span class="icon solid alt major fa-chart-pie"></span>
-                            <h3>Project 3</h3>
-                            <p>A brief description of the project.</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button alt">Learn More</a></li>
-                            </ul>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- Resume Section -->
         <section id="resume" class="wrapper style2 special">
             <div class="inner">
@@ -109,4 +71,15 @@
     <!-- Footer -->
     <footer id="footer">
         <div class="inner">
-            <ul class="icons
+            <ul class="icons">
+                <li><a href="https://github.com/James-Winslow" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://www.linkedin.com/in/james-winslow-11a99087/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://www.strava.com/athletes/61009372" class="icon brands alt fa-strava"><span class="label">Strava</span></a></li>
+            </ul>
+            <p>&copy; 2024 James Winslow. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="assets/js/main.js"></script>
+</body>
+</html>
