Updated portfolio with personal content

--- a/index.html
+++ b/index.html
@@ -1,85 +1,112 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>James Winslow's Portfolio</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+    <title>James Winslow - Portfolio</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-<body>
-    <!-- Header -->
-    <header id="header">
-        <div class="inner">
-            <a href="index.html" class="logo"><strong>James Winslow</strong></a>
-            <nav id="nav">
-                <a href="index.html">Home</a>
-                <a href="#about">About</a>
-                <a href="#resume">Resume</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
-    </header>
+<body class="is-preload">
+    <div id="wrapper">
 
-    <!-- Main -->
-    <div id="main">
-        <!-- Introduction -->
-        <section id="banner">
-            <div class="inner">
-                <h1>Welcome to My Portfolio</h1>
-                <p>Hi, I'm James Winslow, a Data Scientist with a passion for solving complex problems using data-driven approaches.</p>
+        <!-- Header -->
+        <header id="header">
+            <div class="logo">
+                <span class="icon fa-gem"></span>
             </div>
-        </section>
-
-        <!-- About Section -->
-        <section id="about" class="wrapper">
-            <div class="inner">
-                <header class="special">
-                    <h2>About Me</h2>
-                </header>
-                <p>Hi, I'm Jimmy and I currently live in the Seattle area. My journey in the field of data science and statistics has been a rich and fulfilling adventure, marked by a passion for uncovering truths through data.</p>
-                <p>I began my academic career at Gonzaga University, where I pursued a dual degree in Mathematics (BS) and Biology (BA). The rigorous curriculum and diverse subjects ignited my curiosity and equipped me with a solid foundation in quantitative analysis and scientific research. After completing my undergraduate studies, I dedicated a year to volunteer service at the Tennessee Justice Center. Here, I worked as a Community Outreach Coordinator, where I educated underinsured and uninsured clients about insurance eligibility. This experience honed my skills in communication and advocacy, and deepened my understanding of the social impacts of healthcare policies.</p>
-                <p>Driven by a desire to specialize further, I enrolled in the University of Colorado Denver's graduate program, where I earned my Master of Public Health (MPH) in Biostatistics. This program refined my ability to analyze complex data sets and reinforced my commitment to public health and biostatistics.</p>
-                <p>My professional journey began at the VA Eastern Colorado Health Care System as a Statistician. I conducted analyses of longitudinal and survival data from clinical studies, which expanded the number of active studies for our biostatistics team by 20%. I developed analytic plans and reports for physicians in various specialties, and I became adept at using SQL, SAS, and R to manage and analyze data from diverse sources. I then transitioned to the University of Colorado School of Medicine, where I worked as a Data Scientist. I designed and deployed an R Shiny application to evaluate surgical risk, which significantly increased its user base among surgical partners. Through collaboration and feedback integration, I improved the surgical risk prediction model, reducing errors by 15%.</p>
-                <p>Most recently, I served as a Data Scientist at Arisant, where I designed and implemented an analysis pathway for the Bureau of Safety and Environmental Enforcement, reducing errors by 15%. I managed diverse databases, built custom data pipelines, and created machine learning models to predict customer churn, enhancing client success and retention.</p>
-                <p>As I continue to develop my data science and statistics skills, my goal is to make a meaningful contribution to my field, particularly in the realm of AI and large language models (LLMs). I am passionate about discovering the truth and combating misinformation through rigorous data analysis. I hope to leverage my expertise to help both the public and private sectors approach data with integrity and precision. I am eager to stay at the forefront of the rapidly evolving data landscape and to use my skills to make a positive impact. Whether through advancing public health initiatives or driving innovation in technology, my commitment to uncovering truth and promoting data-driven decision-making remains steadfast.</p>
+            <div class="content">
+                <div class="inner">
+                    <h1>James Winslow</h1>
+                    <p>A Data Scientist with a passion for solving complex problems using data-driven approaches.</p>
+                </div>
             </div>
-        </section>
-
-        <!-- Resume Section -->
-        <section id="resume" class="wrapper style2 special">
-            <div class="inner">
-                <header class="major">
-                    <h2>My Resume</h2>
-                </header>
-                <iframe src="assets/resume.pdf" width="600" height="500" type="application/pdf"></iframe>
-            </div>
-        </section>
-
-        <!-- Contact Section -->
-        <section id="contact" class="wrapper style3 special">
-            <div class="inner">
-                <header class="major">
-                    <h2>Contact</h2>
-                </header>
-                <ul class="actions special">
-                    <li><a href="mailto:james.r.winslow@gmail.com" class="button primary">Email Me</a></li>
+            <nav>
+                <ul>
+                    <li><a href="#intro">Intro</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
-            </div>
-        </section>
+            </nav>
+        </header>
+
+        <!-- Main -->
+        <div id="main">
+
+            <!-- Intro -->
+            <article id="intro">
+                <h2 class="major">Intro</h2>
+                <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+                <p>Welcome to my portfolio! I'm James Winslow, a data scientist dedicated to uncovering insights from data and applying them to solve real-world problems. Explore my projects, learn more about my background, and feel free to get in touch.</p>
+            </article>
+
+            <!-- Work -->
+            <article id="work">
+                <h2 class="major">Work</h2>
+                <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+                <p>Here you can find some of the projects I've worked on, showcasing my skills in data science, machine learning, and statistical analysis.</p>
+            </article>
+
+            <!-- About -->
+            <article id="about">
+                <h2 class="major">About</h2>
+                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+                <p>I'm a data scientist with a strong background in statistics and a passion for uncovering truths through data. I hold a Master of Public Health in Biostatistics and have worked in various roles that combine my analytical skills with a drive to solve complex problems.</p>
+            </article>
+
+            <!-- Resume -->
+            <article id="resume">
+                <h2 class="major">Resume</h2>
+                <span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+                <p>Check out my resume to see my educational background, professional experience, and the skills I bring to the table.</p>
+                <embed src="assets/resume/James_Winslow_Resume.pdf" width="600" height="500" alt="pdf" />
+            </article>
+
+            <!-- Contact -->
+            <article id="contact">
+                <h2 class="major">Contact</h2>
+                <form method="post" action="#">
+                    <div class="fields">
+                        <div class="field half">
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name" />
+                        </div>
+                        <div class="field half">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email" />
+                        </div>
+                        <div class="field">
+                            <label for="message">Message</label>
+                            <textarea name="message" id="message" rows="4"></textarea>
+                        </div>
+                    </div>
+                    <ul class="actions">
+                        <li><input type="submit" value="Send Message" class="primary" /></li>
+                        <li><input type="reset" value="Reset" /></li>
+                    </ul>
+                </form>
+            </article>
+
+        </div>
+
+        <!-- Footer -->
+        <footer id="footer">
+            <p class="copyright">&copy; James Winslow. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+        </footer>
+
     </div>
 
-    <!-- Footer -->
-    <footer id="footer">
-        <div class="inner">
-            <ul class="icons">
-                <li><a href="https://github.com/James-Winslow" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="https://www.linkedin.com/in/james-winslow-11a99087/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                <li><a href="https://www.strava.com/athletes/61009372" class="icon brands alt fa-strava"><span class="label">Strava</span></a></li>
-            </ul>
-            <p>&copy; 2024 James Winslow. All rights reserved.</p>
-        </div>
-    </footer>
+    <!-- BG -->
+    <div id="bg"></div>
 
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+
 </body>
 </html>
