Updated portfolio with new background, resume, connect section, and career highlights

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#work">Work</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#resume">Resume</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#connect">Connect</a></li>
                 </ul>
             </nav>
         </header>
@@ -46,7 +46,13 @@
             <article id="work">
                 <h2 class="major">Work</h2>
                 <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-                <p>Here you can find some of the projects I've worked on, showcasing my skills in data science, machine learning, and statistical analysis.</p>
+                <p>Here are some highlights from my career:</p>
+                <ul>
+                    <li><strong>Data Scientist at Arisant:</strong> Led projects in machine learning and data analysis, improving client outcomes through predictive modeling.</li>
+                    <li><strong>Data Scientist at University of Colorado School of Medicine:</strong> Conducted statistical analyses and developed predictive models to support medical research.</li>
+                    <li><strong>Statistician at VA Eastern Colorado Health Care System:</strong> Provided statistical support for various health care studies, enhancing the quality of veteran care through data-driven insights.</li>
+                    <li><strong>Community Outreach Coordinator at Tennessee Justice Center:</strong> Coordinated outreach programs and analyzed data to improve community health services.</li>
+                </ul>
             </article>
 
             <!-- About -->
@@ -61,32 +67,18 @@
                 <h2 class="major">Resume</h2>
                 <span class="image main"><img src="images/pic04.jpg" alt="" /></span>
                 <p>Check out my resume to see my educational background, professional experience, and the skills I bring to the table.</p>
-                <embed src="assets/resume/James_Winslow_Resume.pdf" width="600" height="500" alt="pdf" />
+                <iframe src="assets/resume/James_Winslow_Resume.pdf" width="100%" height="600px"></iframe>
             </article>
 
-            <!-- Contact -->
-            <article id="contact">
-                <h2 class="major">Contact</h2>
-                <form method="post" action="#">
-                    <div class="fields">
-                        <div class="field half">
-                            <label for="name">Name</label>
-                            <input type="text" name="name" id="name" />
-                        </div>
-                        <div class="field half">
-                            <label for="email">Email</label>
-                            <input type="email" name="email" id="email" />
-                        </div>
-                        <div class="field">
-                            <label for="message">Message</label>
-                            <textarea name="message" id="message" rows="4"></textarea>
-                        </div>
-                    </div>
-                    <ul class="actions">
-                        <li><input type="submit" value="Send Message" class="primary" /></li>
-                        <li><input type="reset" value="Reset" /></li>
-                    </ul>
-                </form>
+            <!-- Connect -->
+            <article id="connect">
+                <h2 class="major">Connect</h2>
+                <ul class="icons">
+                    <li><a href="mailto:your-email@example.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/your-profile" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://www.strava.com/athletes/your-profile" class="icon fa-strava"><span class="label">Strava</span></a></li>
+                    <li><a href="https://github.com/your-username" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                </ul>
             </article>
 
         </div>
