--- a/index.html
+++ b/index.html
@@ -37,14 +37,20 @@
 
             <!-- Intro -->
             <article id="intro">
-                <h2 class="major">Intro</h2>
+                    <header>
+        <h2>Intro</h2>
+        <img src="assets/images/pic01.jpg" alt="Header Image">
+    </header>
                 <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
                 <p>Welcome to my portfolio! I'm James Winslow, a data scientist dedicated to uncovering insights from data and applying them to solve real-world problems. Explore my projects, learn more about my background, and feel free to get in touch.</p>
             </article>
 
             <!-- Work -->
             <article id="work">
-                <h2 class="major">Work</h2>
+                    <header>
+        <h2>Work</h2>
+        <img src="assets/images/pic02.jpg" alt="Header Image">
+    </header>
                 <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
                 <p>Here are some highlights from my career:</p>
                 <ul>
@@ -57,7 +63,10 @@
 
             <!-- About -->
             <article id="about">
-                <h2 class="major">About</h2>
+                    <header>
+        <h2>Resume</h2>
+        <img src="assets/images/pic03.jpg" alt="Header Image">
+    </header>
                 <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
                 <p>I'm a data scientist with a strong background in statistics and a passion for uncovering truths through data. I hold a Master of Public Health in Biostatistics and have worked in various roles that combine my analytical skills with a drive to solve complex problems.</p>
             </article>
@@ -67,19 +76,23 @@
                 <h2 class="major">Resume</h2>
                 <span class="image main"><img src="images/pic04.jpg" alt="" /></span>
                 <p>Check out my resume to see my educational background, professional experience, and the skills I bring to the table.</p>
-                <iframe src="assets/resume/James_Winslow_Resume.pdf" width="100%" height="600px"></iframe>
+                <iframe src="assets/resume.pdf" width="100%" height="600px"></iframe>
             </article>
 
-            <!-- Connect -->
-            <article id="connect">
-                <h2 class="major">Connect</h2>
-                <ul class="icons">
-                    <li><a href="mailto:your-email@example.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
-                    <li><a href="https://www.linkedin.com/in/your-profile" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://www.strava.com/athletes/your-profile" class="icon fa-strava"><span class="label">Strava</span></a></li>
-                    <li><a href="https://github.com/your-username" class="icon fa-github"><span class="label">GitHub</span></a></li>
-                </ul>
-            </article>
+<!-- Connect Tab Content -->
+<article id="connect">
+        <header>
+        <h2>Connect</h2>
+        <img src="assets/images/pic04.jpg" alt="Header Image">
+    </header>
+    <ul class="icons">
+        <li><a href="mailto:james.r.winslow@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+        <li><a href="https://www.linkedin.com/in/james-winslow-11a99087/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+        <li><a href="https://www.strava.com/athletes/61009372" class="icon brands fa-strava"><span class="label">Strava</span></a></li>
+        <li><a href="https://github.com/James-Winslow" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+    </ul>
+</article>
+
 
         </div>
 
