--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
 
             <!-- Intro -->
             <article id="intro">
-                    <header>
-        <h2>Intro</h2>
-        <img src="assets/images/pic01.jpg" alt="Header Image">
-    </header>
-                <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+                <header>
+                    <h2>Intro</h2>
+                    <img src="assets/images/pic01.jpg" alt="Header Image">
+                </header>
+                <span class="image main"><img src="assets/images/pic01.jpg" alt="" /></span>
                 <p>Welcome to my portfolio! I'm James Winslow, a data scientist dedicated to uncovering insights from data and applying them to solve real-world problems. Explore my projects, learn more about my background, and feel free to get in touch.</p>
             </article>
 
             <!-- Work -->
             <article id="work">
-                    <header>
-        <h2>Work</h2>
-        <img src="assets/images/pic02.jpg" alt="Header Image">
-    </header>
-                <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+                <header>
+                    <h2>Work</h2>
+                    <img src="assets/images/pic02.jpg" alt="Header Image">
+                </header>
+                <span class="image main"><img src="assets/images/pic02.jpg" alt="" /></span>
                 <p>Here are some highlights from my career:</p>
                 <ul>
                     <li><strong>Data Scientist at Arisant:</strong> Led projects in machine learning and data analysis, improving client outcomes through predictive modeling.</li>
@@ -63,36 +63,38 @@
 
             <!-- About -->
             <article id="about">
-                    <header>
-        <h2>Resume</h2>
-        <img src="assets/images/pic03.jpg" alt="Header Image">
-    </header>
-                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+                <header>
+                    <h2>Resume</h2>
+                    <img src="assets/images/pic03.jpg" alt="Header Image">
+                </header>
+                <span class="image main"><img src="assets/images/pic03.jpg" alt="" /></span>
                 <p>I'm a data scientist with a strong background in statistics and a passion for uncovering truths through data. I hold a Master of Public Health in Biostatistics and have worked in various roles that combine my analytical skills with a drive to solve complex problems.</p>
             </article>
 
             <!-- Resume -->
             <article id="resume">
-                <h2 class="major">Resume</h2>
-                <span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+                <header>
+                    <h2 class="major">Resume</h2>
+                    <img src="assets/images/pic04.jpg" alt="Header Image">
+                </header>
+                <span class="image main"><img src="assets/images/pic04.jpg" alt="" /></span>
                 <p>Check out my resume to see my educational background, professional experience, and the skills I bring to the table.</p>
                 <iframe src="assets/resume.pdf" width="100%" height="600px"></iframe>
             </article>
 
-<!-- Connect Tab Content -->
-<article id="connect">
-        <header>
-        <h2>Connect</h2>
-        <img src="assets/images/pic04.jpg" alt="Header Image">
-    </header>
-    <ul class="icons">
-        <li><a href="mailto:james.r.winslow@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-        <li><a href="https://www.linkedin.com/in/james-winslow-11a99087/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-        <li><a href="https://www.strava.com/athletes/61009372" class="icon brands fa-strava"><span class="label">Strava</span></a></li>
-        <li><a href="https://github.com/James-Winslow" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-    </ul>
-</article>
-
+            <!-- Connect -->
+            <article id="connect">
+                <header>
+                    <h2>Connect</h2>
+                    <img src="assets/images/pic04.jpg" alt="Header Image">
+                </header>
+                <ul class="icons">
+                    <li><a href="mailto:james.r.winslow@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/james-winslow-11a99087/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://www.strava.com/athletes/61009372" class="icon brands fa-strava"><span class="label">Strava</span></a></li>
+                    <li><a href="https://github.com/James-Winslow" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                </ul>
+            </article>
 
         </div>
 
