Update contact links

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 <span class="image main"><img src="assets/images/pic05.jpg" alt="" /></span>
                 <ul>
                     <li><a href="mailto:your-email@example.com">Email</a></li>
-                    <li><a href="https://www.linkedin.com/in/your-profile">LinkedIn</a></li>
-                    <li><a href="https://www.strava.com/athletes/your-profile">Strava</a></li>
-                    <li><a href="https://github.com/your-github-username">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/james-winslow-11a99087/">LinkedIn</a></li>
+                    <li><a href="https://www.strava.com/athletes/61009372">Strava</a></li>
+                    <li><a href="https://github.com/James-Winslow">GitHub</a></li>
                 </ul>
             </article>
 
