Update background styles and ensure section header images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/pic01.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/pic01.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/pic01.jpg">
+    <link rel="manifest" href="site.webmanifest">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
@@ -39,7 +44,7 @@
             <!-- Intro -->
             <article id="intro">
                 <h2 class="major">Intro</h2>
-                <span class="image main"><img src="assets/images/pic01.jpg" alt="" /></span>
+                <span class="image main"><img src="assets/images/pic01.jpg" alt="Intro Image" /></span>
                 <h2>Welcome to my portfolio!</h2>
                 <p>I'm James Winslow, a data scientist dedicated to uncovering insights from data and applying them to solve real-world problems. Explore my projects, learn more about my background, and feel free to get in touch.</p>
             </article>
@@ -47,7 +52,7 @@
             <!-- Work -->
             <article id="work">
                 <h2 class="major">Work</h2>
-                <span class="image main"><img src="assets/images/pic02.jpg" alt="" /></span>
+                <span class="image main"><img src="assets/images/pic02.jpg" alt="Work Image" /></span>
                 <h2>Here are some highlights from my career:</h2>
                 <ul>
                     <li>Data Scientist at Arisant</li>
@@ -60,26 +65,26 @@
             <!-- About -->
             <article id="about">
                 <h2 class="major">About</h2>
-                <span class="image main"><img src="assets/images/pic03.jpg" alt="" /></span>
+                <span class="image main"><img src="assets/images/pic03.jpg" alt="About Image" /></span>
                 <p>Brief bio about my academic and professional journey.</p>
             </article>
 
             <!-- Resume -->
             <article id="resume">
                 <h2 class="major">Resume</h2>
-                <span class="image main"><img src="assets/images/pic04.jpg" alt="" /></span>
+                <span class="image main"><img src="assets/images/pic04.jpg" alt="Resume Image" /></span>
                 <p><a href="resume.pdf" target="_blank">View my resume</a></p>
             </article>
 
             <!-- Contact -->
             <article id="contact">
                 <h2 class="major">Connect</h2>
-                <span class="image main"><img src="assets/images/pic05.jpg" alt="" /></span>
+                <span class="image main"><img src="assets/images/pic05.jpg" alt="Contact Image" /></span>
                 <ul>
-                    <li><a href="mailto:your-email@example.com">Email</a></li>
-                    <li><a href="https://www.linkedin.com/in/james-winslow-11a99087/">LinkedIn</a></li>
-                    <li><a href="https://www.strava.com/athletes/61009372">Strava</a></li>
-                    <li><a href="https://github.com/James-Winslow">GitHub</a></li>
+                    <li><a href="mailto:your-email@example.com"><i class="fas fa-envelope"></i> Email</a></li>
+                    <li><a href="https://www.linkedin.com/in/james-winslow-11a99087/"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                    <li><a href="https://www.strava.com/athletes/61009372"><i class="fab fa-strava"></i> Strava</a></li>
+                    <li><a href="https://github.com/James-Winslow"><i class="fab fa-github"></i> GitHub</a></li>
                 </ul>
             </article>
 
