Fixed images and favicons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!-- Intro -->
             <article id="intro">
                 <h2 class="major">Intro</h2>
-                <span class="image main"><img src="assets/images/pic01.jpg" alt="" /></span>
+                <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
                 <h2>Welcome to my portfolio!</h2>
                 <p>I'm James Winslow, a data scientist dedicated to uncovering insights from data and applying them to solve real-world problems. Explore my projects, learn more about my background, and feel free to get in touch.</p>
             </article>
@@ -47,7 +47,7 @@
             <!-- Work -->
             <article id="work">
                 <h2 class="major">Work</h2>
-                <span class="image main"><img src="assets/images/pic02.jpg" alt="" /></span>
+                <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
                 <h2>Here are some highlights from my career:</h2>
                 <ul>
                     <li>Data Scientist at Arisant</li>
@@ -60,23 +60,23 @@
             <!-- About -->
             <article id="about">
                 <h2 class="major">About</h2>
-                <span class="image main"><img src="assets/images/pic03.jpg" alt="" /></span>
+                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
                 <p>Brief bio about my academic and professional journey.</p>
             </article>
 
             <!-- Resume -->
             <article id="resume">
                 <h2 class="major">Resume</h2>
-                <span class="image main"><img src="assets/images/pic04.jpg" alt="" /></span>
+                <span class="image main"><img src="images/pic04.jpg" alt="" /></span>
                 <p><a href="resume.pdf" target="_blank">View my resume</a></p>
             </article>
 
             <!-- Contact -->
             <article id="contact">
                 <h2 class="major">Connect</h2>
-                <span class="image main"><img src="assets/images/pic05.jpg" alt="" /></span>
+                <span class="image main"><img src="images/pic05.jpg" alt="" /></span>
                 <ul>
-                    <li><a href="mailto:your-email@example.com">Email</a></li>
+                    <li><a href="mailto:james.r.winslow@gmail.com">Email</a></li>
                     <li><a href="https://www.linkedin.com/in/james-winslow-11a99087/">LinkedIn</a></li>
                     <li><a href="https://www.strava.com/athletes/61009372">Strava</a></li>
                     <li><a href="https://github.com/James-Winslow">GitHub</a></li>
