Spelling Résumé properly

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><a href="#intro">Intro</a></li>
                     <li><a href="#work">Work</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="#resume">Résumé</a></li>
                     <li><a href="#contact">Connect</a></li>
                 </ul>
             </nav>
@@ -104,11 +104,11 @@
                 <p>As I look to the future, I am eager to continue advancing in the field of data science, with a particular focus on the intersection of machine learning and data engineering. I aspire to tackle complex problems that require innovative solutions, particularly in industries that have a significant impact on people's lives. I aim to refine my expertise in building scalable data systems and applying advanced analytics to drive business growth and improve decision-making processes. Personally, I am committed to lifelong learning and am excited to explore emerging technologies and methodologies that will shape the future of data science.</p>
             </article>
 
-            <!-- Resume -->
-            <article id="resume">
-                <h2 class="major">Resume</h2>
-                <span class="image main"><img src="images/pic04.jpg" alt="Resume Image" /></span>
-                <p><a href="resume.pdf" target="_blank">View my resume</a></p>
+            <!-- Résumé -->
+            <article id="Résumé">
+                <h2 class="major">Résumé</h2>
+                <span class="image main"><img src="images/pic04.jpg" alt="Résumé Image" /></span>
+                <p><a href="resume.pdf" target="_blank">View my Résumé</a></p>
             </article>
 
             <!-- Contact -->
