Fixed issue with resume tag

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </article>
 
             <!-- Résumé -->
-            <article id="Résumé">
+            <article id="resume">
                 <h2 class="major">Résumé</h2>
                 <span class="image main"><img src="images/pic04.jpg" alt="Résumé Image" /></span>
                 <p><a href="resume.pdf" target="_blank">View my Résumé</a></p>
