Updated front page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="content">
                 <div class="inner">
                     <h1>Jimmy Winslow</h1>
-                    <p>Distance Runner | Outdoors Enthusiast | Data Scientist | Biostatistician | ENFJ | Saggitarius |.</p>
+                    <p>Distance Runner | Outdoors Enthusiast | Data Scientist | Biostatistician | </p>
                 </div>
             </div>
             <nav>
