Fix homepage nav layout to match prompt library style

--- a/index.html
+++ b/index.html
@@ -1,92 +1,50 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
     <title>Jimmy Winslow</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-<body class="is-preload">
-    <div id="wrapper">
-
-        <!-- Header -->
-        <header id="header">
-            <div class="logo">
-                <span class="icon fa-gem"></span>
-            </div>
-            <div class="content">
-                <div class="inner">
-                    <h1>Jimmy Winslow</h1>
-                    <p>Data Scientist · Builder · Collaborator<br />
-                    Creative technologist and strategic thinker</p>
-                </div>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#work">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="prompt-library.html">Prompt Library</a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <!-- Main -->
-        <div id="main">
-            <!-- About -->
-            <article id="about">
-                <h2 class="major">About</h2>
-                <p>Welcome! I'm a data scientist and strategist with a background in public health, applied statistics, and machine learning. My interests span from AI to activism, from deployment to drag. This site is home to my personal projects, technical explorations, and creative problem-solving tools.</p>
-            </article>
-
-            <!-- Work -->
-            <article id="work">
-                <h2 class="major">Projects</h2>
-                <p><strong><a href="wedding-bingo.html">Wedding Bingo</a></strong>: An Azure-hosted Python web app for personalized party bingo.</p>
-                <p><strong><a href="drag-race-bracket.html">Drag Race Bracket</a></strong>: A Flask-powered bracket tracker for RuPaul's All Stars 10.</p>
-                <p><strong><a href="survivor-analysis.html">Survivor Strategy</a></strong>: A data science deep-dive into player stats, alliances, and game structure.</p>
-                <p><strong><a href="usps-route-modeling.html">USPS Route Modeling</a></strong>: Predicting letter carrier efficiency with operational data.</p>
-                <p><strong><a href="prompt-library.html">🧠 Prompt Library</a></strong>: A growing collection of reusable AI prompt frameworks for work, writing, and productivity.</p>
-            </article>
-
-            <!-- Contact -->
-            <article id="contact">
-                <h2 class="major">Contact</h2>
-                <form method="post" action="#">
-                    <div class="fields">
-                        <div class="field half">
-                            <label for="name">Name</label>
-                            <input type="text" name="name" id="name" />
-                        </div>
-                        <div class="field half">
-                            <label for="email">Email</label>
-                            <input type="email" name="email" id="email" />
-                        </div>
-                        <div class="field">
-                            <label for="message">Message</label>
-                            <textarea name="message" id="message" rows="4"></textarea>
-                        </div>
-                    </div>
-                    <ul class="actions">
-                        <li><input type="submit" value="Send Message" class="primary" /></li>
-                    </ul>
-                </form>
-                <ul class="icons">
-                    <li><a href="https://github.com/james-winslow" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                    <li><a href="https://www.linkedin.com/in/james-winslow/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                </ul>
-            </article>
-        </div>
-
-        <!-- Footer -->
-        <footer id="footer">
-            <p class="copyright">&copy; Jimmy Winslow. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-        </footer>
-    </div>
-
-    <!-- BG -->
+    <link rel="stylesheet" href="main.css" />
+    <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Background -->
     <div id="bg"></div>
+
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Header -->
+      <header id="header">
+        <div class="logo">
+          <span class="icon fa-gem"></span>
+        </div>
+        <div class="content">
+          <div class="inner">
+            <h1>Jimmy Winslow</h1>
+            <p>Data Scientist · Builder · Collaborator<br />
+            Creative Technologist and Strategic Thinker</p>
+          </div>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="prompt-library.html#career">Career</a></li>
+            <li><a href="prompt-library.html#projects">Projects</a></li>
+            <li><a href="prompt-library.html#productivity">Productivity</a></li>
+            <li><a href="prompt-library.html#creative">Creative</a></li>
+            <li><a href="prompt-library.html#learning">Learning</a></li>
+            <li><a href="prompt-library.html#best-practices">Best Practices</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <!-- Footer -->
+      <footer id="footer">
+        <p class="copyright">
+          © Jimmy Winslow. Design: <a href="https://html5up.net">HTML5 UP</a>.
+        </p>
+      </footer>
+    </div>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
@@ -94,5 +52,5 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-</body>
+  </body>
 </html>
