--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Jimmy Winslow</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
   </head>
   <body class="is-preload">
