--- a/index.html
+++ b/index.html
@@ -25,17 +25,15 @@
             Creative Technologist and Strategic Thinker</p>
           </div>
         </div>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="prompt-library.html#career">Career</a></li>
-            <li><a href="prompt-library.html#projects">Projects</a></li>
-            <li><a href="prompt-library.html#productivity">Productivity</a></li>
-            <li><a href="prompt-library.html#creative">Creative</a></li>
-            <li><a href="prompt-library.html#learning">Learning</a></li>
-            <li><a href="prompt-library.html#best-practices">Best Practices</a></li>
-          </ul>
-        </nav>
+       <nav>
+  <ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="prompt-library.html">Prompt Library</a></li>
+  </ul>
+</nav>
+
       </header>
 
       <!-- Footer -->
