--- a/index.html
+++ b/index.html
@@ -1,48 +1,93 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
   <head>
-    <title>Jimmy Winslow</title>
+    <title>James Winslow</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   </head>
   <body class="is-preload">
-    <!-- Background -->
-    <div id="bg"></div>
 
     <!-- Wrapper -->
     <div id="wrapper">
+
       <!-- Header -->
       <header id="header">
         <div class="logo">
-          <span class="icon fa-gem"></span>
+          <span class="icon solid fa-user"></span>
         </div>
         <div class="content">
           <div class="inner">
-            <h1>Jimmy Winslow</h1>
-            <p>Data Scientist · Builder · Collaborator<br />
-            Creative Technologist and Strategic Thinker</p>
+            <h1>James Winslow</h1>
+            <p>Data Scientist | Storyteller | Problem Solver</p>
           </div>
         </div>
-       <nav>
-  <ul>
-    <li><a href="#about">About</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li><a href="prompt-library.html">Prompt Library</a></li>
-  </ul>
-</nav>
-
+        <nav>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
       </header>
+
+      <!-- Main -->
+      <div id="main">
+
+        <!-- About -->
+        <article id="about">
+          <h2 class="major">About</h2>
+          <p>Hello! I'm James, a data scientist with a passion for turning numbers into stories and building tools that matter. I specialize in statistical analysis, machine learning, and building smart, impactful applications.</p>
+        </article>
+
+        <!-- Projects -->
+        <article id="projects">
+          <h2 class="major">Projects</h2>
+          <p>Here are a few of my favorite data science and software projects. For more, check out my <a href="https://github.com/james-winslow" target="_blank">GitHub</a>.</p>
+          <ul>
+            <li><strong>Wedding Bingo App</strong> – Azure-hosted Python app with Flask</li>
+            <li><strong>Instagram Photo Resizer</strong> – Custom ML image padding and quality optimization</li>
+            <!-- <li><strong>Survivor NLP Project</strong> – TV show analysis using LLM categorization</li> -->
+          </ul>
+        </article>
+
+        <!-- Contact -->
+        <article id="contact">
+          <h2 class="major">Contact</h2>
+          <form method="post" action="#">
+            <div class="fields">
+              <div class="field half">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" />
+              </div>
+              <div class="field half">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" />
+              </div>
+              <div class="field">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" rows="4"></textarea>
+              </div>
+            </div>
+            <ul class="actions">
+              <li><input type="submit" value="Send Message" class="primary" /></li>
+              <li><input type="reset" value="Reset" /></li>
+            </ul>
+          </form>
+        </article>
+
+      </div>
 
       <!-- Footer -->
       <footer id="footer">
-        <p class="copyright">
-          © Jimmy Winslow. Design: <a href="https://html5up.net">HTML5 UP</a>.
-        </p>
+        <p class="copyright">&copy; James Winslow. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
       </footer>
+
     </div>
+
+    <!-- BG -->
+    <div id="bg"></div>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
@@ -50,5 +95,6 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+
   </body>
 </html>
